--- a/VD_Project/VD_Project.vcxproj.filters
+++ b/VD_Project/VD_Project.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="헤더 파일\Code">
+      <UniqueIdentifier>{a1169e29-2446-464d-a831-16e9cc41a722}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\Code">
+      <UniqueIdentifier>{7b57f6f6-3591-4103-b63f-af27f957c73d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -27,11 +33,8 @@
     <ClInclude Include="VD_Project.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Code\FieldData.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Code\VoronoiDiagram.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>헤더 파일\Code</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -51,11 +54,8 @@
     <ClCompile Include="VD_Project.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Code\FieldData.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="Code\VoronoiDiagram.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\Code</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
